# GameZero

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  main.cpp
ChatServerClient/: CMakeLists.txt  ChatClient.h  ChatServer.h  DbgClient.h  MessageType.h
ChatServerClient/ServerClient/: CMakeLists.txt
ChatServerClient/ServerClient/include/: Logs.h  Session.h  TcpClient.h  TcpServer.h
ChatServerClient/ServerClient/src/: Session.cpp  test.cpp
ServerClient/: CMakeLists.txt
ServerClient/include/: ClientSession.h  Logs.h  Session.h  TcpClient.h  TcpServer.h
ServerClient/src/: ClientSession.cpp  test.cpp
__MACOSX/ChatServerClient/: ._ChatClient.h  ._ChatServer.h
__MACOSX/ChatServerClient/ServerClient/: ._CMakeLists.txt
__MACOSX/ChatServerClient/ServerClient/include/: ._Session.h  ._TcpClient.h  ._TcpServer.h
